--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@
 
 body {
     text-align: center;
-    background-image: url('file:///Users/jacksonfranks/Desktop/background_jungle_master2_2070.png');
+    background-image: url('file:///Users/jacksonfranks/Desktop/bbd65d4efd14552bc56ce37e1fa705f6.png');
+    background-size: auto;
 }
 
 #gameOn {
     display: none;
-    background-image: url('file:///Users/jacksonfranks/Desktop/8aCQkW.jpg');
+    background-image: url('file:///Users/jacksonfranks/Desktop/a200d28aace7b76d7b7e6b9d2223e348.jpg');
+    background-size: 380px 750px;
     width: 385px;
     
 }
