--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); */
 
 
 body {
@@ -7,7 +7,8 @@ body {
     width: 100%;
     height: 100vh;
     background-size: 100% 100%;
-    
+    font-family: 'Press Start 2P', cursive;
+    color: yellow;
     
     
 }
@@ -32,5 +33,14 @@ body {
 
 #retrybutton {
     text-align: center;
+    display: none
+}
+
+input {
+    font-family: 'Press Start 2P', cursive;
+}
+
+#timer {
+    display: none;
 }
 
